sass/xwing.sass
$xwing_icons_png: '../images/xwing-icons.png'

.show-on-print
  display: none

.nav-tabs > .active > a
  color: white !important

.ship-container > .row-fluid
  padding: 10px 0px

.select2-container

.card-stat
  font-weight: bold
  font-size: 1.25em

.info-data.info-skill
  @extend .card-stat
  color: #CD6D2D

.info-data.info-attack
  @extend .card-stat
  color: #EF232B

.info-data.info-agility
  @extend .card-stat
  color: #6BBE44

.info-data.info-hull
  @extend .card-stat
  color: #F0EC1E

.info-data.info-shields
  @extend .card-stat
  color: #7ED3E5
  padding: 2px

.info-well
  color: black
  margin-top: 10px

.info-well table > tbody > tr > td:first-child
  font-weight: bold
  vertical-align: top

.points-display-container
  font-size: 1.2em
  font-weight: bold
  background-color: rgba(0, 0, 0, 0.5)
  padding-top: 5px
  text-align: center

.points-display-container span
  padding: 5px 0px

.modal
  color: black

.icon
  background-image: url($xwing_icons_png)
  background-size: 254px 32px
  background-position-y: -4px
  background-repeat: no-repeat

img.icon-straight
  @extend .icon
  width: 9px
  height: 18px
  background-position-x: 0px

img.icon-bankleft
  @extend .icon
  width: 11px
  height: 18px
  background-position-x: -12px

img.icon-bankright
  @extend .icon
  width: 10px
  height: 18px
  background-position-x: -27px

img.icon-turnleft
  @extend .icon
  width: 16px
  height: 18px
  background-position-x: -39px

img.icon-turnright
  @extend .icon
  width: 19px
  height: 18px
  background-position-x: -55px

img.icon-uturn
  @extend .icon
  width: 17px
  height: 18px
  background-position-x: -73px

img.icon-focus
  @extend .icon
  width: 25px
  height: 18px
  background-position-x: -94px

img.icon-evade
  @extend .icon
  width: 13px
  height: 21px
  background-position-x: -123px

img.icon-barrel-roll
  @extend .icon
  width: 34px
  height: 21px
  background-position-x: -140px

img.icon-target-lock
  @extend .icon
  width: 27px
  height: 21px
  background-position-x: -175px

img.icon-hit
  @extend .icon
  width: 18px
  height: 21px
  background-position-x: -205px

img.icon-crit
  @extend .icon
  width: 25px
  height: 25px
  background-position-x: -227px

